Add categories BE

--- a/Server/Movington/appsettings.Development.json
+++ b/Server/Movington/appsettings.Development.json
@@ -12,7 +12,10 @@
       "OpenIdConnectUrl": "https://ndobryanskyy.eu.auth0.com/.well-known/openid-configuration",
       "ClientId": "fG12EnVGwEsL54wAPY2krchl0KQaGO2z",
       "Audience": "movington.api"
-    } 
+    }
+  },
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Database=movington;Username=postgres;Password=P@ssw0rd"
   },
   "Logging": {
     "LogLevel": {
